cambios en feature generation

--- a/pre_processing.ipynb
+++ b/pre_processing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,18 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Importing Jupyter notebook from feature_generation.ipynb\n",
-      "Importing Jupyter notebook from pre_processing.ipynb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import nbimporter\n",
     "import feature_generation"
@@ -38,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,28 +50,13 @@
     "    train = pd.read_csv('./data/train.csv', index_col='id', parse_dates=['fecha'])\n",
     "    test = pd.read_csv('./data/test.csv', index_col='id', parse_dates=['fecha'])\n",
     "    df = train.append(test, sort=False)\n",
-    "    df = df[['titulo', 'descripcion', 'direccion', 'tipodepropiedad', 'ciudad', 'provincia', 'antiguedad',\n",
-    "         'habitaciones', 'garages', 'banos', 'metroscubiertos', 'metrostotales', 'idzona', 'fecha',\n",
-    "         'gimnasio', 'usosmultiples', 'piscina', 'escuelascercanas', 'centroscomercialescercanos', 'precio']]\n",
-    "    \n",
-    "    whitelist_tipodepropiedad = df['tipodepropiedad'].value_counts().index.to_list()[:9]\n",
-    "    df['tipodepropiedad'] = df['tipodepropiedad'].apply(lambda x: x if x in whitelist_tipodepropiedad else 'Otro') \n",
-    "    \n",
-    "    #whitelist_ciudad = df['ciudad'].value_counts().index.to_list()[:80]\n",
-    "    #df['ciudad'] = df['ciudad'].apply(lambda x: x if x in whitelist_ciudad else 'Otro')\n",
-    "    \n",
-    "    categoricas = ['tipodepropiedad', 'ciudad', 'provincia']\n",
-    "    df[categoricas] = df[categoricas].fillna('unknown')\n",
-    "    df[categoricas] = df[categoricas].astype('category')\n",
-    "    enteras = ['gimnasio', 'usosmultiples', 'piscina', 'escuelascercanas', 'centroscomercialescercanos']\n",
-    "    df[enteras] = df[enteras].astype('int8')\n",
-    "    \n",
+    "   \n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,42 +71,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_datasets():\n",
     "    \"\"\"Carga ambos dataframes (train y test) y devuelve dos datasets en el formato:\n",
     "    train_df, test_df\"\"\"\n",
-    "    \n",
+    "\n",
     "    df = load_appended_dataset()\n",
     "    return separate_train_test(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_featured_appended_dataset():\n",
     "    \"\"\"Carga el .csv con los features generados, y lo formatea para ahorrar memoria. Devuelve un unico\n",
     "    dataframe cuyas primeras 240.000 filas son de train.csv y sus ultimas 60.000 de test.\"\"\"\n",
+    "      \n",
+    "    df = load_appended_dataset()\n",
+    "    \n",
+    "    csv_names = feature_generation.get_csvs_names()\n",
     "    features_types = feature_generation.get_features_types()\n",
     "    \n",
-    "    df = pd.read_csv('./data/full_featured.csv', index_col='id')\n",
-    "    df[features_types['bernoulli']] = df[features_types['bernoulli']].astype('uint8')\n",
-    "    df[features_types['float']] = df[features_types['float']].astype('float')\n",
-    "    df[features_types['uint8']] = df[features_types['uint8']].astype('uint8')\n",
-    "    df[features_types['uint16']] = df[features_types['uint16']].astype('uint16')\n",
-    "    df[features_types['uint32']] = df[features_types['uint32']].astype('uint32')\n",
+    "    for file in csv_names:\n",
+    "        ruta = 'features/'+file+'.csv'\n",
+    "        add = pd.read_csv(ruta, index_col='id')\n",
+    "        df = pd.merge(df, add, how='left', on='id')\n",
+    "           \n",
+    "    for categoria in features_types.keys():\n",
+    "        for tipo in features_types[categoria]:\n",
+    "            castear = features_types[categoria][tipo]\n",
+    "            if (tipo == 'bernoulli'):\n",
+    "                df[castear] = df[castear].astype('uint8')\n",
+    "            elif (tipo == 'float'):\n",
+    "                df[castear] = df[castear].astype('float')\n",
+    "            elif (tipo == 'uint8'):\n",
+    "                df[castear] = df[castear].astype('uint8')\n",
+    "            elif (tipo == 'uint16'):\n",
+    "                df[castear] = df[castear].astype('uint16')\n",
+    "            elif (tipo == 'uint32'):\n",
+    "                df[castear] = df[castear].astype('uint32')\n",
     "    \n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,13 +136,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -160,11 +145,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "usd = pd.read_csv('data/usd_mxn_diario.csv')"
+    "usd = pd.read_csv('external_datasets/usd_mxn_diario.csv')"
    ]
   },
   {
@@ -176,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -241,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +299,7 @@
        "201205           9.99   13.630126"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,11 +310,262 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "usd.to_csv('data/usd_mxn_featured.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Volcanes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('external_datasets/volcanes.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[['properties/OBJECTID', 'properties/LAT', 'properties/LONG_']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns = ['id', 'lat', 'long']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.set_index('id', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lat</th>\n",
+       "      <th>long</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>19</td>\n",
+       "      <td>19.030365</td>\n",
+       "      <td>-97.268213</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>20</td>\n",
+       "      <td>18.562021</td>\n",
+       "      <td>-95.198504</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>21</td>\n",
+       "      <td>19.493241</td>\n",
+       "      <td>-102.251431</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>22</td>\n",
+       "      <td>18.973674</td>\n",
+       "      <td>-101.717852</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>23</td>\n",
+       "      <td>19.308206</td>\n",
+       "      <td>-110.806474</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>62</td>\n",
+       "      <td>20.830000</td>\n",
+       "      <td>-104.820000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>59</td>\n",
+       "      <td>28.500000</td>\n",
+       "      <td>-113.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>54</td>\n",
+       "      <td>29.338829</td>\n",
+       "      <td>-114.517599</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>21.849758</td>\n",
+       "      <td>-105.885230</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>60</td>\n",
+       "      <td>18.303998</td>\n",
+       "      <td>-94.730072</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>67 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          lat        long\n",
+       "id                       \n",
+       "19  19.030365  -97.268213\n",
+       "20  18.562021  -95.198504\n",
+       "21  19.493241 -102.251431\n",
+       "22  18.973674 -101.717852\n",
+       "23  19.308206 -110.806474\n",
+       "..        ...         ...\n",
+       "62  20.830000 -104.820000\n",
+       "59  28.500000 -113.750000\n",
+       "54  29.338829 -114.517599\n",
+       "9   21.849758 -105.885230\n",
+       "60  18.303998  -94.730072\n",
+       "\n",
+       "[67 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('data/volcanes_featured.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Llenado de valores nulos en tipo de propiedad\n",
+    "Funcion que es llamada desde feature_generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def buscar_tipo(x):\n",
+    "    lista = ['casas', 'departamento', 'casa', 'terrenos', 'terreno', 'departamentos',\n",
+    "             'apartamento', 'apartamentos', 'comercio', 'locales', 'condominio', 'residencia']\n",
+    "    palabras = x.lower().split(' ')\n",
+    "    categorias=[]\n",
+    "    for palabra in palabras:\n",
+    "        if palabra in lista:\n",
+    "            categorias.append(palabra)\n",
+    "    if len(categorias)==0:\n",
+    "        return ['Otros']\n",
+    "    elif len(categorias)>1:\n",
+    "        return casas_condominio(categorias)\n",
+    "    return categorias\n",
+    "\n",
+    "def casas_condominio(lista):\n",
+    "    for palabra in lista:\n",
+    "        if palabra == 'condominio':\n",
+    "            return ['condominio']\n",
+    "    return lista\n",
+    "\n",
+    "def translate_tiposdepropiedad(x):\n",
+    "    translate = {'casas':'Casa', 'departamento':'Apartamento', 'casa':'Casa', 'terrenos':'Terreno',\n",
+    "                 'terreno':'Terreno', 'departamentos':'Apartamento', 'apartamento':'Apartamento',\n",
+    "                 'apartamentos':'Apartamento', 'comercio':'Comercial', 'locales':'Comercial',\n",
+    "                 'condominio':'Casa en condominio', 'residencia':'Casa', 'Otros':'Otros'}\n",
+    "    return translate[x]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fill_tipodepropiedad_nulls(nulos):\n",
+    "    nulos['tipodepropiedad_titulo'] = nulos['titulo'].map(buscar_tipo)\n",
+    "    nulos['tipodepropiedad_titulo'] = nulos['tipodepropiedad_titulo'].map(lambda x: translate_tiposdepropiedad(x[0]))\n",
+    "    \n",
+    "    return nulos.drop('tipodepropiedad', axis=1)"
    ]
   },
   {
