arreglo error en features-metricas

--- a/feature_generation.ipynb
+++ b/feature_generation.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,9 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Importing Jupyter notebook from pre_processing.ipynb\n",
+      "Importing Jupyter notebook from feature_generation.ipynb\n"
+     ]
+    }
+   ],
    "source": [
     "import nbimporter\n",
     "import pre_processing"
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1259,155 +1268,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_dicc_provincia():\n",
     "    return {0: ['provincia_le'],\n",
-    " 1: ['provincia_1_ohe',\n",
-    "  'provincia_2_ohe',\n",
-    "  'provincia_3_ohe',\n",
-    "  'provincia_4_ohe',\n",
-    "  'provincia_5_ohe',\n",
-    "  'provincia_6_ohe',\n",
-    "  'provincia_7_ohe',\n",
-    "  'provincia_8_ohe',\n",
-    "  'provincia_9_ohe',\n",
-    "  'provincia_10_ohe',\n",
-    "  'provincia_11_ohe',\n",
-    "  'provincia_12_ohe',\n",
-    "  'provincia_13_ohe',\n",
-    "  'provincia_14_ohe',\n",
-    "  'provincia_15_ohe',\n",
-    "  'provincia_16_ohe',\n",
-    "  'provincia_17_ohe',\n",
-    "  'provincia_18_ohe',\n",
-    "  'provincia_19_ohe',\n",
-    "  'provincia_20_ohe',\n",
-    "  'provincia_21_ohe',\n",
-    "  'provincia_22_ohe',\n",
-    "  'provincia_23_ohe',\n",
-    "  'provincia_24_ohe',\n",
-    "  'provincia_25_ohe',\n",
-    "  'provincia_26_ohe',\n",
-    "  'provincia_27_ohe',\n",
-    "  'provincia_28_ohe',\n",
-    "  'provincia_29_ohe',\n",
-    "  'provincia_30_ohe',\n",
-    "  'provincia_31_ohe',\n",
-    "  'provincia_32_ohe',\n",
-    "  'provincia_33_ohe',\n",
-    "  'provincia_0_binary',\n",
-    "  'provincia_1_binary',\n",
-    "  'provincia_2_binary',\n",
-    "  'provincia_3_binary',\n",
-    "  'provincia_4_binary',\n",
-    "  'provincia_5_binary',\n",
-    "  'provincia_6_binary',\n",
-    "  'es_Distrito Federal',\n",
-    "  'es_Edo. de México',\n",
-    "  'es_Jalisco',\n",
-    "  'es_Querétaro',\n",
-    "  'es_Nuevo León',\n",
-    "  'es_Puebla',\n",
-    "  'es_San luis Potosí',\n",
-    "  'es_Yucatán',\n",
-    "  'es_Morelos',\n",
-    "  'es_Veracruz'],\n",
-    " 2: ['provincia_0_binary',\n",
-    "  'provincia_1_binary',\n",
-    "  'provincia_2_binary',\n",
-    "  'provincia_3_binary',\n",
-    "  'provincia_4_binary',\n",
-    "  'provincia_5_binary',\n",
-    "  'provincia_6_binary'],\n",
-    " 3: ['es_Distrito Federal',\n",
-    "  'es_Edo. de México',\n",
-    "  'es_Jalisco',\n",
-    "  'es_Querétaro',\n",
-    "  'es_Nuevo León',\n",
-    "  'es_Puebla',\n",
-    "  'es_San luis Potosí',\n",
-    "  'es_Yucatán',\n",
-    "  'es_Morelos',\n",
-    "  'es_Veracruz'],\n",
-    " 4: ['es_Distrito Federal',\n",
-    "  'es_Edo. de México',\n",
-    "  'es_Jalisco',\n",
-    "  'es_Querétaro',\n",
-    "  'es_Nuevo León',\n",
-    "  'provincia_le'],\n",
+    " 1: ['provincia_1_ohe',  'provincia_2_ohe',  'provincia_3_ohe',  'provincia_4_ohe',  'provincia_5_ohe',\n",
+    "  'provincia_6_ohe',  'provincia_7_ohe',  'provincia_8_ohe',  'provincia_9_ohe',  'provincia_10_ohe',  'provincia_11_ohe',\n",
+    "  'provincia_12_ohe',  'provincia_13_ohe',  'provincia_14_ohe',  'provincia_15_ohe',  'provincia_16_ohe',  'provincia_17_ohe',\n",
+    "  'provincia_18_ohe',  'provincia_19_ohe',  'provincia_20_ohe',  'provincia_21_ohe',  'provincia_22_ohe',  'provincia_23_ohe',\n",
+    "  'provincia_24_ohe',  'provincia_25_ohe',  'provincia_26_ohe',  'provincia_27_ohe',  'provincia_28_ohe',  'provincia_29_ohe',\n",
+    "  'provincia_30_ohe',  'provincia_31_ohe',  'provincia_32_ohe',  'provincia_33_ohe',  'provincia_0_binary',  'provincia_1_binary',\n",
+    "  'provincia_2_binary',  'provincia_3_binary',  'provincia_4_binary',  'provincia_5_binary',  'provincia_6_binary',\n",
+    "  'es_Distrito Federal',  'es_Edo. de México',  'es_Jalisco',  'es_Querétaro',  'es_Nuevo León',  'es_Puebla',\n",
+    "  'es_San luis Potosí',  'es_Yucatán',  'es_Morelos',  'es_Veracruz'],\n",
+    " 2: ['provincia_0_binary',  'provincia_1_binary',  'provincia_2_binary',  'provincia_3_binary',  'provincia_4_binary',\n",
+    "  'provincia_5_binary',  'provincia_6_binary'],\n",
+    " 3: ['es_Distrito Federal',  'es_Edo. de México',  'es_Jalisco',  'es_Querétaro',  'es_Nuevo León',\n",
+    "  'es_Puebla',  'es_San luis Potosí',  'es_Yucatán',  'es_Morelos',  'es_Veracruz'],\n",
+    " 4: ['es_Distrito Federal',  'es_Edo. de México',  'es_Jalisco',  'es_Querétaro',  'es_Nuevo León',  'provincia_le'],\n",
     " 5: ['es_Distrito Federal', 'es_Edo. de México', 'provincia_le'],\n",
-    " 6: ['es_Distrito Federal',\n",
-    "  'es_Edo. de México',\n",
-    "  'provincia_0_binary',\n",
-    "  'provincia_1_binary',\n",
-    "  'provincia_2_binary',\n",
-    "  'provincia_3_binary',\n",
-    "  'provincia_4_binary',\n",
-    "  'provincia_5_binary',\n",
-    "  'provincia_6_binary']}"
+    " 6: ['es_Distrito Federal',  'es_Edo. de México',  'provincia_0_binary',  'provincia_1_binary',  'provincia_2_binary',\n",
+    "  'provincia_3_binary',  'provincia_4_binary',  'provincia_5_binary',  'provincia_6_binary']}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_dicc_provincia_types():\n",
     "    return {'uint8': ['provincia_le'],\n",
-    " 'bernoulli': ['provincia_1_ohe',\n",
-    "  'provincia_2_ohe',\n",
-    "  'provincia_3_ohe',\n",
-    "  'provincia_4_ohe',\n",
-    "  'provincia_5_ohe',\n",
-    "  'provincia_6_ohe',\n",
-    "  'provincia_7_ohe',\n",
-    "  'provincia_8_ohe',\n",
-    "  'provincia_9_ohe',\n",
-    "  'provincia_10_ohe',\n",
-    "  'provincia_11_ohe',\n",
-    "  'provincia_12_ohe',\n",
-    "  'provincia_13_ohe',\n",
-    "  'provincia_14_ohe',\n",
-    "  'provincia_15_ohe',\n",
-    "  'provincia_16_ohe',\n",
-    "  'provincia_17_ohe',\n",
-    "  'provincia_18_ohe',\n",
-    "  'provincia_19_ohe',\n",
-    "  'provincia_20_ohe',\n",
-    "  'provincia_21_ohe',\n",
-    "  'provincia_22_ohe',\n",
-    "  'provincia_23_ohe',\n",
-    "  'provincia_24_ohe',\n",
-    "  'provincia_25_ohe',\n",
-    "  'provincia_26_ohe',\n",
-    "  'provincia_27_ohe',\n",
-    "  'provincia_28_ohe',\n",
-    "  'provincia_29_ohe',\n",
-    "  'provincia_30_ohe',\n",
-    "  'provincia_31_ohe',\n",
-    "  'provincia_32_ohe',\n",
-    "  'provincia_33_ohe',\n",
-    "  'provincia_0_binary',\n",
-    "  'provincia_1_binary',\n",
-    "  'provincia_2_binary',\n",
-    "  'provincia_3_binary',\n",
-    "  'provincia_4_binary',\n",
-    "  'provincia_5_binary',\n",
-    "  'provincia_6_binary',\n",
-    "  'es_Distrito Federal',\n",
-    "  'es_Edo. de México',\n",
-    "  'es_Jalisco',\n",
-    "  'es_Querétaro',\n",
-    "  'es_Nuevo León',\n",
-    "  'es_Puebla',\n",
-    "  'es_San luis Potosí',\n",
-    "  'es_Yucatán',\n",
-    "  'es_Morelos',\n",
-    "  'es_Veracruz']}"
+    " 'bernoulli': ['provincia_1_ohe',  'provincia_2_ohe',  'provincia_3_ohe',  'provincia_4_ohe',  'provincia_5_ohe',\n",
+    "  'provincia_6_ohe',  'provincia_7_ohe',  'provincia_8_ohe',  'provincia_9_ohe',  'provincia_10_ohe',\n",
+    "  'provincia_11_ohe',  'provincia_12_ohe',  'provincia_13_ohe',  'provincia_14_ohe',  'provincia_15_ohe',\n",
+    "  'provincia_16_ohe',  'provincia_17_ohe',  'provincia_18_ohe',  'provincia_19_ohe',  'provincia_20_ohe',\n",
+    "  'provincia_21_ohe',  'provincia_22_ohe',  'provincia_23_ohe',  'provincia_24_ohe',  'provincia_25_ohe',\n",
+    "  'provincia_26_ohe',  'provincia_27_ohe',  'provincia_28_ohe',  'provincia_29_ohe',  'provincia_30_ohe',\n",
+    "  'provincia_31_ohe',  'provincia_32_ohe',  'provincia_33_ohe',  'provincia_0_binary',  'provincia_1_binary',\n",
+    "  'provincia_2_binary',  'provincia_3_binary',  'provincia_4_binary',  'provincia_5_binary',  'provincia_6_binary',\n",
+    "  'es_Distrito Federal',  'es_Edo. de México',  'es_Jalisco',  'es_Querétaro',  'es_Nuevo León',\n",
+    "  'es_Puebla',  'es_San luis Potosí',  'es_Yucatán',  'es_Morelos',  'es_Veracruz']}"
    ]
   },
   {
@@ -2796,7 +2699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2815,7 +2718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2826,7 +2729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -2845,7 +2748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2857,7 +2760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2867,7 +2770,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Combinaciones adicionales\n",
+    "\n",
+    "dicc_metricas[2] = ['metroscubiertos_city_mean', 'metroscubiertos_city_std', 'metroscubiertos_mean', 'metroscubiertos_std']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2877,26 +2791,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_dicc_metricas():\n",
     "    return {0: ['metroscubiertos_mean', 'metroscubiertos_std'],\n",
-    " 1: ['metroscubiertos_city_mean', 'metroscubiertos_city_std']}"
+    " 1: ['metroscubiertos_city_mean', 'metroscubiertos_city_std'],\n",
+    " 2: ['metroscubiertos_city_mean',  'metroscubiertos_city_std',  'metroscubiertos_mean',  'metroscubiertos_std']}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_dicc_metricas_types():\n",
     "    return {'float': ['metroscubiertos_mean',\n",
-    "  'metroscubiertos_std',\n",
-    "  'metroscubiertos_city_mean',\n",
-    "  'metroscubiertos_city_std']}"
+    "  'metroscubiertos_std',  'metroscubiertos_city_mean',  'metroscubiertos_city_std']}"
    ]
   },
   {
@@ -2993,23 +2906,11 @@
    "outputs": [],
    "source": [
     "def get_dicc_antiguedad():\n",
-    "    return {0: ['antiguedad_binning_1_ohe1',\n",
-    "  'antiguedad_binning_2_ohe1',\n",
-    "  'antiguedad_binning_3_ohe1',\n",
-    "  'antiguedad_binning_4_ohe1',\n",
-    "  'antiguedad_binning_5_ohe1',\n",
-    "  'antiguedad_binning_6_ohe1',\n",
-    "  'antiguedad_binning_7_ohe1',\n",
-    "  'antiguedad_binning_8_ohe1',\n",
-    "  'antiguedad_binning_9_ohe1',\n",
-    "  'antiguedad_binning_2_1_ohe2',\n",
-    "  'antiguedad_binning_2_2_ohe2',\n",
-    "  'antiguedad_binning_2_3_ohe2',\n",
-    "  'antiguedad_binning_2_4_ohe2'],\n",
-    " 1: ['antiguedad_binning_2_1_ohe2',\n",
-    "  'antiguedad_binning_2_2_ohe2',\n",
-    "  'antiguedad_binning_2_3_ohe2',\n",
-    "  'antiguedad_binning_2_4_ohe2']}"
+    "    return {0: ['antiguedad_binning_1_ohe1',  'antiguedad_binning_2_ohe1',  'antiguedad_binning_3_ohe1',\n",
+    "  'antiguedad_binning_4_ohe1',  'antiguedad_binning_5_ohe1',  'antiguedad_binning_6_ohe1',\n",
+    "  'antiguedad_binning_7_ohe1',  'antiguedad_binning_8_ohe1',  'antiguedad_binning_9_ohe1',\n",
+    "  'antiguedad_binning_2_1_ohe2',  'antiguedad_binning_2_2_ohe2',  'antiguedad_binning_2_3_ohe2',  'antiguedad_binning_2_4_ohe2'],\n",
+    " 1: ['antiguedad_binning_2_1_ohe2',  'antiguedad_binning_2_2_ohe2',  'antiguedad_binning_2_3_ohe2',  'antiguedad_binning_2_4_ohe2']}"
    ]
   },
   {
@@ -3019,19 +2920,10 @@
    "outputs": [],
    "source": [
     "def get_dicc_antiguedad_types():\n",
-    "    return {'bernoulli': ['antiguedad_binning_1_ohe1',\n",
-    "  'antiguedad_binning_2_ohe1',\n",
-    "  'antiguedad_binning_3_ohe1',\n",
-    "  'antiguedad_binning_4_ohe1',\n",
-    "  'antiguedad_binning_5_ohe1',\n",
-    "  'antiguedad_binning_6_ohe1',\n",
-    "  'antiguedad_binning_7_ohe1',\n",
-    "  'antiguedad_binning_8_ohe1',\n",
-    "  'antiguedad_binning_9_ohe1',\n",
-    "  'antiguedad_binning_2_1_ohe2',\n",
-    "  'antiguedad_binning_2_2_ohe2',\n",
-    "  'antiguedad_binning_2_3_ohe2',\n",
-    "  'antiguedad_binning_2_4_ohe2']}"
+    "    return {'bernoulli': ['antiguedad_binning_1_ohe1',  'antiguedad_binning_2_ohe1',  'antiguedad_binning_3_ohe1',\n",
+    "  'antiguedad_binning_4_ohe1',  'antiguedad_binning_5_ohe1',  'antiguedad_binning_6_ohe1',\n",
+    "  'antiguedad_binning_7_ohe1',  'antiguedad_binning_8_ohe1',  'antiguedad_binning_9_ohe1',\n",
+    "  'antiguedad_binning_2_1_ohe2',  'antiguedad_binning_2_2_ohe2',  'antiguedad_binning_2_3_ohe2',  'antiguedad_binning_2_4_ohe2']}"
    ]
   },
   {
@@ -3091,13 +2983,8 @@
    "outputs": [],
    "source": [
     "def get_dicc_habitaciones():\n",
-    "    return {0: ['hab_binning_1_ohe',\n",
-    "  'hab_binning_2_ohe',\n",
-    "  'hab_binning_3_ohe',\n",
-    "  'hab_binning_4_ohe',\n",
-    "  'hab_binning_5_ohe',\n",
-    "  'hab_binning_6_ohe',\n",
-    "  'hab_binning_7_ohe']}"
+    "    return {0: ['hab_binning_1_ohe',  'hab_binning_2_ohe',  'hab_binning_3_ohe',  'hab_binning_4_ohe',\n",
+    "  'hab_binning_5_ohe',  'hab_binning_6_ohe',  'hab_binning_7_ohe']}"
    ]
   },
   {
@@ -3107,13 +2994,8 @@
    "outputs": [],
    "source": [
     "def get_dicc_habitaciones_types():\n",
-    "    return {'bernoulli': ['hab_binning_1_ohe',\n",
-    "  'hab_binning_2_ohe',\n",
-    "  'hab_binning_3_ohe',\n",
-    "  'hab_binning_4_ohe',\n",
-    "  'hab_binning_5_ohe',\n",
-    "  'hab_binning_6_ohe',\n",
-    "  'hab_binning_7_ohe']}"
+    "    return {'bernoulli': ['hab_binning_1_ohe',  'hab_binning_2_ohe',  'hab_binning_3_ohe',  'hab_binning_4_ohe',\n",
+    "  'hab_binning_5_ohe',  'hab_binning_6_ohe',  'hab_binning_7_ohe']}"
    ]
   },
   {
