agregue algunos mean encodings con smoothing, falta testear

--- a/feature_selection.ipynb
+++ b/feature_selection.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,6 +110,7 @@
     "    mejor_mae = 99999999999\n",
     "    for i in range(len(features[categoria].keys()) - 1):\n",
     "        mae = predict(df, features[categoria][i], base)\n",
+    "        print(f\"Con i={i}, MAE= {mae}\")\n",
     "        if mae<mejor_mae:\n",
     "            mejor_mae = mae\n",
     "            mejor = i\n",
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
