--- a/feature_generation.ipynb
+++ b/feature_generation.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2101,7 +2101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2116,7 +2116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2129,7 +2129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2140,7 +2140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2151,7 +2151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2162,7 +2162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -2295,7 +2295,7 @@
        "185997                              15521  "
       ]
      },
-     "execution_count": 172,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2306,7 +2306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2316,7 +2316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2327,7 +2327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2336,7 +2336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2345,7 +2345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2354,7 +2354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2366,7 +2366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2375,7 +2375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2384,7 +2384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2393,7 +2393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2560,7 +2560,7 @@
        "185997              5 -1.000000e+00      0.104528  "
       ]
      },
-     "execution_count": 182,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2571,7 +2571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 40,
    "metadata": {
     "scrolled": true
    },
@@ -2595,7 +2595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2604,7 +2604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2616,7 +2616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2628,7 +2628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2640,7 +2640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 45,
    "metadata": {
     "scrolled": false
    },
@@ -2838,7 +2838,7 @@
        "185997        0.985401                      0.898305  "
       ]
      },
-     "execution_count": 188,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2849,7 +2849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 46,
    "metadata": {
     "scrolled": true
    },
@@ -2865,7 +2865,7 @@
        "Name: aniomes, dtype: float64"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2878,7 +2878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2887,7 +2887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2921,7 +2921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2936,7 +2936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2955,7 +2955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2964,7 +2964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3003,7 +3003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3953,7 +3953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3965,22 +3965,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# smoothing\n",
     "\n",
-    "df_idzona['idzona_meanencoding_m0'] = calc_smooth_mean(df_idzona, by='idzona', on='precio', m=0)\n",
-    "df_idzona['idzona_meanencoding_m1'] = calc_smooth_mean(df_idzona, by='idzona', on='precio', m=5000)\n",
-    "df_idzona['idzona_meanencoding_m2'] = calc_smooth_mean(df_idzona, by='idzona', on='precio', m=10000)\n",
-    "df_idzona['idzona_meanencoding_m3'] = calc_smooth_mean(df_idzona, by='idzona', on='precio', m=50000)\n",
-    "df_idzona['idzona_meanencoding_m4'] = calc_smooth_mean(df_idzona, by='idzona', on='precio', m=150000)"
+    "df_idzona['idzona_meanencoding_m0'] = mean_encoding(df_idzona, by='idzona', on='precio', m=0)\n",
+    "df_idzona['idzona_meanencoding_m1'] = mean_encoding(df_idzona, by='idzona', on='precio', m=1000)\n",
+    "df_idzona['idzona_meanencoding_m2'] = mean_encoding(df_idzona, by='idzona', on='precio', m=5000)\n",
+    "df_idzona['idzona_meanencoding_m3'] = mean_encoding(df_idzona, by='idzona', on='precio', m=10000)\n",
+    "df_idzona['idzona_meanencoding_m4'] = mean_encoding(df_idzona, by='idzona', on='precio', m=20000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3989,6 +3989,9 @@
     "dicc_idzona[2] = ['idzona_meanencoding_m2']\n",
     "dicc_idzona[3] = ['idzona_meanencoding_m3']\n",
     "dicc_idzona[4] = ['idzona_meanencoding_m4']\n",
+    "dicc_idzona[5] = ['idzona_meanencoding_m0', 'idzona_meanencoding_m1', 'idzona_meanencoding_m2', \n",
+    "                             'idzona_meanencoding_m3', 'idzona_meanencoding_m4']\n",
+    "\n",
     "\n",
     "dicc_idzona_types['float'] = ['idzona_meanencoding_m0', 'idzona_meanencoding_m1', 'idzona_meanencoding_m2', \n",
     "                             'idzona_meanencoding_m3', 'idzona_meanencoding_m4']"
@@ -3996,7 +3999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4006,7 +4009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4015,12 +4018,13 @@
     " 1: ['idzona_meanencoding_m1'],\n",
     " 2: ['idzona_meanencoding_m2'],\n",
     " 3: ['idzona_meanencoding_m3'],\n",
-    " 4: ['idzona_meanencoding_m4']}"
+    " 4: ['idzona_meanencoding_m4'],\n",
+    " 5: ['idzona_meanencoding_m0',  'idzona_meanencoding_m1',  'idzona_meanencoding_m2',  'idzona_meanencoding_m3',  'idzona_meanencoding_m4']}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
